Fix#27 Google map not visible on placelist.php for visitors

--- a/css-1.7.8/style.css
+++ b/css-1.7.8/style.css
@@ -2621,7 +2621,6 @@ table#place_hierarchy {
 #place_map {
 	margin-right: 20px;
 	margin-top: 25px;
-	width: auto !important;  /* remove fixed width for responsive layout */	
 }
 
 #place-hierarchy .gm-options {
